# bag-of-visual-words

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: ClangFormat.cmake  StaticAnalyzers.cmake  TestCoverage.cmake
docker/: Dockerfile
include/bow/: bow.h
include/bow/algorithms/: algorithms.hpp
include/bow/core/: descriptor.hpp  dictionary.hpp  histogram.hpp  kmeans.hpp
include/bow/io/: dataset.hpp  serialization.hpp
include/bow/web/: html_writer.hpp  image_browser.hpp
scripts/: plotHistogram.py  test_coverage.sh
scripts/release/: make_release.sh  release_data.json  upload_artifacts.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  bow_params.cfg  default_style.css  example.cpp  main.cpp  main_web.cpp
src/bow/: CMakeLists.txt
src/bow/algorithms/: CMakeLists.txt  algorithms.cpp
src/bow/core/: CMakeLists.txt  descriptor.cpp  dictionary.cpp  histogram.cpp  kmeans.cpp
src/bow/io/: CMakeLists.txt  dataset.cpp  serialization.cpp
src/bow/ui/: CMakeLists.txt
src/bow/web/: CMakeLists.txt  html_writer.cpp  image_browser.cpp
src/lib/: CMakeLists.txt
tests/: CMakeLists.txt  dummy_test.cpp  test_algorithms.cpp  test_bow.cpp  test_data.cpp  test_data.hpp  test_dataset.cpp  test_descriptors.cpp  test_dictionary.cpp  test_histograms.cpp  test_utils.hpp  test_web.cpp
tests/test_data/: example.html
tests/test_data/dummy_dataset/histograms/: bow_codebook.dict  dummy_0.csv  dummy_20.csv  dummy_40.csv  dummy_60.csv  dummy_80.csv  histogram_dataset.idf
